Changes from jTDS 1.0.2
=======================

03/04/2005 - Alin Sinpalean
 o Added an extra concurrency test, which runs two Statements in parallel: one
   doing SELECTs and UPDATEs and the other doing cancel()s. Seems to work fine.

03/03/2005 - Alin Sinpalean
 o Added a batchSize parameter to control how many statements should be sent at
   once in a batch execution. Batches are now broken up into pieces on
   execution if they exceed this size limit.

03/01/2005 - Alin Sinpalean
 o Following Mike's suggestion, reduced the chunk of code synchronized with
   cancelMonitor to only TdsCore.cancelPending assignments, to ensure these are
   atomic. That should be enough, now that SharedSocket is also synced.

02/28/2005 - Alin Sinpalean
 o Applied Mike's patch [1124854] SSO fixes - prevents error from crashing JVM.
 o Modified ClobImpl to use UCS-2 encoding for storing/retrieving character
   data to/from disk. Previously the default system encoding was used, causing
   characters not in the system encoding to be lost.
 o Corrected a resource (temp file) leak in ClobImpl and BlobImpl: the file
   property was set to null before deleting the file, possibly causing it to
   remain there until the JVM terminated.
 o Completely synchronized access to cancelPending and endOfResponse in TdsCore
   and cancelPending and responseOwner in SharedSocket. This should prevent any
   race conditions when a cancel() is issued.
 o Applied the rest of Mike's fix for bug [1152329] Spurious output params
   assigned (TIMESTMP). Missed part of it when doing the merge.
 o Added FAQ entry about Sybase batching, as discussed in bug report [1123350]
   Hang when executing performance test.

02/27/2005 - Alin Sinpalean
 o Enhanced update count caching implementation by always caching update counts
   up to the end of the response or beginning of the first ResultSet (whichever
   comes first) whenever the end of the current ResultSet is reached. This